--- a/web2(updated-scrolling) copy.ipynb
+++ b/web2(updated-scrolling) copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 139,
    "id": "c48b662b",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 140,
    "id": "c4043cec",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 141,
    "id": "bdbe55f8",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 144,
    "id": "b69d1353",
    "metadata": {},
    "outputs": [
@@ -50,16 +50,6 @@
      "text": [
       "Scrolling Done.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nthis code dont run \\ncheck again and debug.\\n'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -75,50 +65,34 @@
     "        else :\n",
     "            continue\n",
     "except:\n",
-    "     print(\"Scrolling Done.\")\n",
-    "\n",
-    "\n",
-    "#This code dont run ,check again and debug.\n"
+    "     print(\"Scrolling Done.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5b071736",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'element' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m element\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'element' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "element"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 143,
    "id": "ac0a97ad",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'element' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mlen\u001b[39m(element)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'element' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "63"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -280,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
