data_collection_index_name
data collection and save data in csv file

--- a/price_analysis.ipynb
+++ b/price_analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "ca4b4a68",
+   "id": "9e295a1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "81118802",
+   "id": "fe41bfc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "7dce2940",
+   "id": "dda52ffd",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "2256258f",
+   "id": "04947303",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "4a417a3d",
+   "id": "e40979c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
     "    if price <= spss['25%']:\n",
     "        status.append('ارزان')\n",
     "    if spss['25%'] < price <spss['75%']:\n",
-    "        status.append('معمول')\n",
+    "        status.append(مع')\n",
     "    if price >= spss['75%']:\n",
     "        status.append('گران')\n",
     "data['status']=status"
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "5031a9df",
+   "id": "f0218f22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fc2bd88",
+   "id": "44ce569b",
    "metadata": {},
    "outputs": [],
    "source": []
